Fix See details button and align to left text in the tables

--- a/apparelrow/static/less/_pages.less
+++ b/apparelrow/static/less/_pages.less
@@ -1024,3 +1024,7 @@
         }
     }
 }
+
+.top-publishers, .top-products {
+    text-align: left;
+}
